--- a/.gitlab-ci-hotel.yml
+++ b/.gitlab-ci-hotel.yml
@@ -55,7 +55,7 @@ hotel-daily-check:
   stage: build
   script:
     - ./gradlew :components:hotel-module:main:fileCounter
-    - ./gradlew :components:hotel-module:main:checker
+    - ./gradlew :components:hotel-module:main:dangerousApiTask
 #lint job
 #hotelLint:
 #  only:
