--- a/components/home-module/myhome/src/main/AndroidManifest.xml
+++ b/components/home-module/myhome/src/main/AndroidManifest.xml
@@ -108,6 +108,9 @@
         <activity
             android:name=".screen.photo.LargePhotoActivity"
             android:theme="@style/Theme.AppCompat.Light" />
+        <activity
+            android:name=".screen.profile.ProfileDetailActivity"
+            android:theme="@style/Theme.AppCompat.Light" />
     </application>
 
 </manifest>
