--- a/components/hotel-module/bundle1/build.gradle
+++ b/components/hotel-module/bundle1/build.gradle
@@ -6,4 +6,15 @@ android {
 
     }
 
+    buildTypes {
+        inhouse {
+            initWith debug
+            lintOptions {
+                warningsAsErrors false
+                abortOnError true
+            }
+        }
+
+    }
+
 }
