--- a/.gitmodules
+++ b/.gitmodules
@@ -49,7 +49,7 @@
 
 [submodule "framework/network/super-retrofit"]
 	path = framework/network/super-retrofit
-	url = https://github.com/JamesfChen/super-retrofit.git
+	url = git@github.com:JamesfChen/super-retrofit.git
 [submodule "framework/loader/uix"]
 	path = framework/loader/uix
 	url = https://github.com/JamesfChen/uix.git
