--- a/.gitlab-ci-hotel.yml
+++ b/.gitlab-ci-hotel.yml
@@ -23,6 +23,14 @@ hotel-bundle1-build:
   script:
     - ./gradlew :components:hotel-module:bundle1:build
 
+hotel-bundle1-lint:
+  only:
+    changes:
+      - components/hotel-module/bundle1/**/*
+  stage: build
+  script:
+    - ./gradlew :components:hotel-module:bundle1:lintInhouse
+
 hotel-bundle1-deploy:
   only:
     changes:
