--- a/framework/image/build.gradle
+++ b/framework/image/build.gradle
@@ -64,11 +64,11 @@ dependencies {
     /**
      * ===============================image start=============================
      */
-    api 'com.github.bumptech.glide:glide:4.11.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     api 'androidx.exifinterface:exifinterface:1.3.2'
+
+    api 'com.github.bumptech.glide:glide:4.11.0'
     api 'com.github.bumptech.glide:recyclerview-integration:4.11.0'
+    api "com.github.bumptech.glide:okhttp3-integration:4.11.0"
 
     api 'com.facebook.fresco:fresco:2.0.0'
     api 'com.facebook.fresco:animated-gif:2.2.0'
