--- a/framework/image/build.gradle
+++ b/framework/image/build.gradle
@@ -6,10 +6,13 @@ android {
             cmake {
                 arguments "-DANDROID_ARM_NEON=TRUE", "-DANDROID_TOOLCHAIN=clang"
                 cppFlags "-std=c++14", "-fexceptions", "-frtti"
-                cFlags "-D__STDC_FORMAT_MACROS"
+//                        "DHAVE_CONFIG_H", "-Wno-sign-compare"
+                cFlags "-D__STDC_FORMAT_MACROS", "-Wall", "-Werror", "-Wno-unused-parameter",
+                        "-Wno-unused-variable", "-Wno-overloaded-virtual", "-fvisibility=hidden"
 //                cppFlags "-std=gnu++11"
 //                targets "hawks","hotfix"
-                abiFilters "arm64-v8a", "armeabi-v7a" /*,"x86","x86_64"*/   //输出制定三种abi体系结构下的so库
+                abiFilters "arm64-v8a", "armeabi-v7a" /*,"x86","x86_64"*/
+                //输出制定三种abi体系结构下的so库
             }
         }
 
@@ -22,7 +25,6 @@ android {
     }
     sourceSets {
         def srcDirs = [
-                "gif",
         ]
         main {
             java.excludes = [
