--- a/framework/image/build.gradle
+++ b/framework/image/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     api 'com.squareup.picasso:picasso-pollexor:2.71828'
 
     api 'com.caverock:androidsvg:1.2.1'
+    api("io.coil-kt:coil:1.3.2")
     /**
      * ===============================image end=============================
      */
