--- a/module_config.json
+++ b/module_config.json
@@ -9,18 +9,22 @@
       "group": "father",
       "binary_artifact": "com.jamesfchen.spacecraft:app:1.0",
       "deps": [
-        ":components:hotel-module:bundle1",":components:hotel-module:bundle2",":components:home-module:myhome",":components:account-module:login",":components:account-module:login"
+        ":components:hotel-module:bundle1",
+        ":components:hotel-module:bundle2",
+        ":components:home-module:myhome",
+        ":components:account-module:login",
+        ":components:account-module:login"
       ]
     },
     {
-          "simpleName": "account-main",
-          "canonicalName": ":components:account-module:main",
-          "format": "app",
-          "group": "account",
-          "binary_artifact": "com.jamesfchen.spacecraft.spacecraft:account-main:1.0",
-          "deps": [
-            ":components:account-module:login"
-          ]
+      "simpleName": "account-main",
+      "canonicalName": ":components:account-module:main",
+      "format": "app",
+      "group": "account",
+      "binary_artifact": "com.jamesfchen.spacecraft.spacecraft:account-main:1.0",
+      "deps": [
+        ":components:account-module:login"
+      ]
     },
     {
       "simpleName": "account-login",
@@ -59,7 +63,8 @@
       "group": "hotel",
       "binary_artifact": "com.jamesfchen.spacecraft:hotel-main:1.0",
       "deps": [
-        ":components:hotel-module:bundle1", ":components:hotel-module:bundle2"
+        ":components:hotel-module:bundle1",
+        ":components:hotel-module:bundle2"
       ]
     },
     {
@@ -98,7 +103,6 @@
       "deps": [
         ":framework:loader"
       ]
-
     },
     {
       "simpleName": "framework-loader",
@@ -111,13 +115,6 @@
         ":framework:av",
         ":framework:image"
       ]
-    },
-    {
-      "simpleName": "framework-flutter",
-      "canonicalName": ":framework:flutter",
-      "format": "framework_foundation",
-      "group": "fwk",
-      "binary_artifact": "com.jamesfchen.spacecraft:framework-flutter:1.0"
     },
     {
       "simpleName": "framework-hybrid",
@@ -136,7 +133,8 @@
       "group": "fwk",
       "binary_artifact": "com.jamesfchen.spacecraft:framework-network:1.0",
       "deps": [
-        ":framework:common",":framework:mockserver"
+        ":framework:common",
+        ":framework:mockserver"
       ]
     },
     {
