--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -206,28 +206,28 @@ dependencies {
 //    api "androidx.compose.material:material:1.0.1"
 //    api "androidx.compose.ui:ui-tooling:1.0.1"
 //    api 'androidx.activity:activity-compose:1.3.1'
-    api "androidx.compose.compiler:compiler:1.0.0-beta08"
+    api "androidx.compose.compiler:compiler:1.0.2"
 //    androidTestApi "androidx.compose.ui:ui-test-junit4:1.0.1"
-    api 'androidx.compose.ui:ui:1.0.0-rc02'
+    api 'androidx.compose.ui:ui:1.0.2'
     // Tooling support (Previews, etc.)
-    api 'androidx.compose.ui:ui-tooling:1.0.0-rc02'
+    api 'androidx.compose.ui:ui-tooling:1.0.2'
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    api 'androidx.compose.foundation:foundation:1.0.0-rc02'
+    api 'androidx.compose.foundation:foundation:1.0.2'
     // Material Design
-    api 'androidx.compose.material:material:1.0.0-rc02'
+    api 'androidx.compose.material:material:1.0.2'
     // Material design icons
-    api 'androidx.compose.material:material-icons-core:1.0.0-rc02'
-    api 'androidx.compose.material:material-icons-extended:1.0.0-rc02'
+    api 'androidx.compose.material:material-icons-core:1.0.2'
+    api 'androidx.compose.material:material-icons-extended:1.0.2'
     // Integration with activities
-    api 'androidx.activity:activity-compose:1.3.0-rc02'
+    api 'androidx.activity:activity-compose:1.3.1'
     // Integration with ViewModels
-    api 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
+    api 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-beta01'
     // Integration with observables
-    api 'androidx.compose.runtime:runtime-livedata:1.0.0-rc02'
-    api 'androidx.compose.runtime:runtime-rxjava2:1.0.0-rc02'
+    api 'androidx.compose.runtime:runtime-livedata:1.0.2'
+    api 'androidx.compose.runtime:runtime-rxjava2:1.0.2'
 
     // UI Tests
-    androidTestApi 'androidx.compose.ui:ui-test-junit4:1.0.0-rc02'
+    androidTestApi 'androidx.compose.ui:ui-test-junit4:1.0.2'
     /**
      * ===============================ui end=============================
      */
