--- a/.gitlab-ci-myhome.yml
+++ b/.gitlab-ci-myhome.yml
@@ -5,26 +5,39 @@ home-myhome-build:
       - components/home-module/myhome/**/*
   stage: build
   script:
-    - ./gradlew :components:home-module:myhome:build
+    - ./gradlew :components:home-module:myhome:assemble
+
+hotel-myhome-lint:
+  only:
+    changes:
+      - components/home-module/myhome/**/*
+  stage: build
+  script:
+    - ./gradlew :components:home-module:myhome:lintInhouse
+
 home-myhome-deploy:
   only:
     changes:
       - components/home-module/myhome/**/*
   stage: deploy
   script:
-    - ./gradlew :components:home-module:myhome:publishToMavenLocal
+    - ./gradlew :components:home-module:myhome:publishToMavenLocal #发布到远程仓库
 
 # ========================
-
-home-daily-check:
+home-daily-check1:
   only:
     changes:
-      - components/home-module/myhome/**/*
+      - components/home-module/**/*
   stage: build
   script:
     - ./gradlew :components:hotel-module:main:fileCounter
+home-daily-check2:
+  only:
+    changes:
+      - components/home-module/**/*
+  stage: build
+  script:
     - ./gradlew :components:hotel-module:main:dangerousApiTask
-
 
 #debugTests:
 #  stage: test
