--- a/script/module_builder.gradle
+++ b/script/module_builder.gradle
@@ -176,10 +176,10 @@ task publishAll {
                 }
             }
         } catch (Exception ignored) {
-            println(">>>> 出现异常没有全部发布，需要动手处理一下")
+            println(">>>> 出现异常没有全部发布，需要动手处理一下 !!!!!! !!!!!!")
         } finally {
             Collections.sort(ret)
-            println(">>>> publish ${ret.size()} modules !!!!!! !!!!!!")
+            println(">>>> publish ${ret.size()} modules")
             println(">>>> ${ret}")
         }
     }
