--- a/components/home-module/myhome/build.gradle
+++ b/components/home-module/myhome/build.gradle
@@ -15,6 +15,9 @@ android {
             }
         }
     }
+    buildFeatures {
+        dataBinding true
+    }
     externalNativeBuild {
         cmake {
             path "CMakeLists.txt"
