--- a/framework/loader/build.gradle
+++ b/framework/loader/build.gradle
@@ -56,6 +56,32 @@ dependencies {
     /**
      * ================================ui start=====================================
      */
+    api 'com.google.accompanist:accompanist-insets:0.19.0'
+    api "com.google.accompanist:accompanist-insets-ui:0.19.0"
+    //compose
+    def composeVersion = '1.0.2'
+    api "androidx.compose.foundation:foundation-layout:${composeVersion}"
+    api "androidx.compose.runtime:runtime:${composeVersion}"
+    api "androidx.compose.ui:ui-util:${composeVersion}"
+    api "androidx.compose.ui:ui-viewbinding:${composeVersion}"
+    api "androidx.compose.compiler:compiler:${composeVersion}"
+    api "androidx.compose.ui:ui:${composeVersion}"
+    // Tooling support (Previews, etc.)
+    api "androidx.compose.ui:ui-tooling:${composeVersion}"
+    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    api "androidx.compose.foundation:foundation:${composeVersion}"
+    api "androidx.compose.material:material:${composeVersion}"
+    api "androidx.compose.material:material-icons-core:${composeVersion}"
+    api "androidx.compose.material:material-icons-extended:${composeVersion}"
+    // Integration with observables
+    api "androidx.compose.runtime:runtime-livedata:${composeVersion}"
+    api "androidx.compose.runtime:runtime-rxjava2:${composeVersion}"
+    // UI Tests
+    androidTestApi "androidx.compose.ui:ui-test-junit4:${composeVersion}"
+
+    // Integration with ViewModels
+    api 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
+
     api 'jp.wasabeef:recyclerview-animators:4.0.2'
     api 'com.github.DingMouRen:LayoutManagerGroup:1e6f4f96eb'
     api "androidx.recyclerview:recyclerview:1.2.1"
