--- a/module_config.json
+++ b/module_config.json
@@ -16,6 +16,26 @@
       ]
     },
     {
+      "simpleName": "im-main",
+      "canonicalName": ":components:im-module:main",
+      "format": "app",
+      "group": "im",
+      "binary_artifact": "com.jamesfchen.spacecraft:im-main:1.0",
+      "deps": [
+        ":components:im-module:chatroom"
+      ]
+    },
+    {
+      "simpleName": "im-chatroom",
+      "canonicalName": ":components:im-module:chatroom",
+      "format": "bundle",
+      "group": "im",
+      "binary_artifact": "com.jamesfchen.spacecraft:im-chatroom:1.0",
+      "deps": [
+        ":framework:loader"
+      ]
+    },
+    {
       "simpleName": "account-main",
       "canonicalName": ":components:account-module:main",
       "format": "app",
